2005-09-07  Derek Price  <derek@ximbiot.com>

	Close <http://savannah.nongnu.org/bugs/?func=detailitem&item_id=14462>.
	* rcs.c (RCS_parse): Free variable *after* using it for the last time.

2005-09-06  Derek Price  <derek@ximbiot.com>

	* rcs.c (RCS_putdtree): Remove unused variable.

2005-09-06  Mark D. Baushke  <mdb@gnu.org>

	Close <https://savannah.nongnu.org/bugs/?func=detailitem&item_id=14435>.
	* rcs.c (RCS_putdtree): Avoid stack overflow which may be
	possible with excessive recursive calls to RCS_putdtree().
	(Patch from Serg Masyutin.)

2005-09-03  Derek Price  <derek@ximbiot.com>

	* add.c (add_usage): Standardize usage message somewhat.

2005-09-02  Larry Jones  <lawrence.jones@ugs.com>

	* commit.c (checkaddfile): Improve error messages for lock_RCS failure.
	* release.c (release): Improve error message for pclose failure.

	* root.h (struct cvsroot_s): Always declare isremote to simplify
	other code.  Simplify referencing code.
	* root.c (new_cvsroot_t): Always initialize isremote.
	* server.h: Always declare server_active to simplify other code.
	Simplify referencing code.
	* server.c: Always define server_active.

2005-09-01  Derek Price  <derek@ximbiot.com>

	* main.c, wrapper.c: Update links.

2005-09-01  Derek Price  <derek@ximbiot.com>

	* recurse.c: Update bug report email address.

2005-08-30  Larry Jones  <lawrence.jones@ugs.com>

	* import.c (import_descend): Lock repository directory during import.

2005-07-12  Derek Price  <derek@ximbiot.com>

	* buffer.c, buffer.h, client.h, expand_path.c, history.c, myndbm.h,
	release.c: Add copyright notices.

2005-07-11  Derek Price  <derek@ximbiot.com>

	* buffer.c, buffer.h, client.h, expand_path.c, history.c, myndbm.h,
	release.c: Update license notices.

2005-06-22  Larry Jones  <lawrence.jones@ugs.com>

        * vers_ts (Version_TS): Don't allow command line keyword expansion
        modes to override binary mode.
        * sanity.sh (): Tests for the above.
        (Merged from trunk.)
