@@ -1,3 +1,8 @@
+2005-09-12  Derek Price  <derek@ximbiot.com>
+
+	* sanity.sh (username): Cut $username down to 8 characters when longer,
+	since that is all that appears in output.
+
 2005-09-07  Derek Price  <derek@ximbiot.com>
 
 	Close <http://savannah.nongnu.org/bugs/?func=detailitem&item_id=14462>.
